--- a/New Year Countdown/index.html
+++ b/New Year Countdown/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Chilanka">
     <title>New Year Countdown</title>
 </head>
@@ -43,6 +43,6 @@
     </div>
    
     
-<script src="main.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
