--- a/Hanged Man/index.html
+++ b/Hanged Man/index.html
@@ -231,8 +231,8 @@
 
 		.no-stick-man {
 			position: absolute;
-			left: 350px;
-			top: 250px;
+			left: 20%;
+			top: 30%;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -243,8 +243,8 @@
 
 		.no-stick-man2 {
 			position: absolute;
-			left: 350px;
-			top: 300px;
+			left: 20%;
+			top: 35%;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -264,8 +264,8 @@
 
     .villager {
       position: absolute;
-		  left: 400px;
-		  top: 400px;
+		  left: 25%;
+		  top: 40%;
 
 	</style>
 
@@ -418,7 +418,7 @@ function check(nr)
 //win
     if(password[number]==password2)
     {
-        document.getElementById("alphabet").innerHTML="Congratulations, You Won! Your passsword was: "+password[number]+'<br/><br/><span class="reset" onclick="location.reload()">Wanna try again?</span>';
+        document.getElementById("alphabet").innerHTML="Congratulations, You Won! Your password was: "+password[number]+'<br/><br/><span class="reset" onclick="location.reload()">Wanna try again?</span>';
     }
 //lose
      if(failures>=9)
